--- a/ACGN/20240322/index.html
+++ b/ACGN/20240322/index.html
@@ -4,13 +4,16 @@
     <title>隨機配對參賽者</title>
     <style>
         body {
-            background-image: url('BG.png');
-            background-size: cover;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
+    background-image: url('BG.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-color: #FFFFFF; /* 設置背景顏色與圖片邊緣顏色相同或其他顏色 */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
         .container {
             text-align: center;
             background-color: rgba(255, 255, 255, 0.8);
