增加背景音樂

--- a/ACGN/20240322/index.html
+++ b/ACGN/20240322/index.html
@@ -35,6 +35,9 @@
     </style>
 </head>
 <body>
+    <audio autoplay loop>
+        <source src="BG.mp3" type="audio/mpeg">
+    </audio>
     <div class="container">
         <textarea id="participants" placeholder="請輸入參賽者名單，每行一位參賽者..."></textarea><br>
         <button onclick="randomPair()">Go!!!</button>
